--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,4 +16,8 @@ pydantic_core==2.33.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 yarl==1.20.1
+pandas==2.2.2
+redis==5.0.3
+pytest==8.4.1
+python-dotenv==1.0.0
 psycopg2-binary==2.9.10
